--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <article class="book">
                 <div class="book-spine" aria-hidden="true"></div>
                 <div class="book-meta">
-                  <h3>Polyglot’s Maltese</h3>
+                  <h3>Polyglot's Maltese</h3>
                   <p>Complete beginner course • Dialogue-driven • Structured grammar</p>
                   <p class="book-note">Target: 2026</p>
                 </div>
@@ -97,7 +97,7 @@
               <article class="book">
                 <div class="book-spine" aria-hidden="true"></div>
                 <div class="book-meta">
-                  <h3>Polyglot’s Armenian</h3>
+                  <h3>Polyglot's Armenian</h3>
                   <p>Eastern Armenian focus • Script support • Real-world listening</p>
                   <p class="book-note">Target: 2026</p>
                 </div>
@@ -106,7 +106,25 @@
               <article class="book">
                 <div class="book-spine" aria-hidden="true"></div>
                 <div class="book-meta">
-                  <h3>Polyglot’s Luxembourgish</h3>
+                  <h3>Polyglot's Dzongkha</h3>
+                  <p>Tibetan script • Tonal guidance • Culturally grounded dialogues</p>
+                  <p class="book-note">Target: 2026</p>
+                </div>
+              </article>
+
+              <article class="book">
+                <div class="book-spine" aria-hidden="true"></div>
+                <div class="book-meta">
+                  <h3>Polyglot's Kurdish</h3>
+                  <p>Kurmanji focus • Practical communication • Clear morphology</p>
+                  <p class="book-note">Target: 2027</p>
+                </div>
+              </article>
+
+              <article class="book">
+                <div class="book-spine" aria-hidden="true"></div>
+                <div class="book-meta">
+                  <h3>Polyglot's Luxembourgish</h3>
                   <p>Phonology-aware • Practical register • Modern usage notes</p>
                   <p class="book-note">Target: 2027</p>
                 </div>
